--- a/QRmenuAPI/appsettings.json
+++ b/QRmenuAPI/appsettings.json
@@ -5,6 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "ApplicationDatabase": "Server=localhost;Database=QRmenuAPI;User Id=SA;Password=reallyStrongPwd123;Encrypt=False;MultipleActiveResultSets=true"
+  },
   "AllowedHosts": "*"
 }
 
