--- a/QRmenuAPI/appsettings.json
+++ b/QRmenuAPI/appsettings.json
@@ -6,7 +6,9 @@
     }
   },
   "ConnectionStrings": {
-    "ApplicationDatabase": "Server=localhost;Database=QRmenuAPI;User Id=SA;Password=reallyStrongPwd123;Encrypt=False;MultipleActiveResultSets=true"
+    "ApplicationDatabase": "Data Source=LocalHost;Integrated Security=True;Encrypt=False"
+
+    //"Server=localhost;Database=QRmenuAPI;User Id=SA;Password=reallyStrongPwd123;Encrypt=False;MultipleActiveResultSets=true"
   },
   "AllowedHosts": "*"
 }
